test/corpus/statements.txt
=======
Include
=======

<@ ../some-file.php @>
<@ ../some-file.svg @>
<@~ ../some-file.php ~@>

---

(automad
  (statement
    (statement_open)
    (include)
    (statement_close))
  (statement
    (statement_open)
    (include)
    (statement_close))
  (statement
    (statement_open)
    (include)
    (statement_close))
  (text))

=========
Extension
=========

<@ Vendor/Package { key: "value", :runtime: "value", ?empty: "" } @>

---

(automad
  (statement
    (statement_open)
    (function)
    (options
      (key)
      (string)
      (key)
      (string)
      (key)
      (string))
    (statement_close))
  (text))

========
For Loop
========

<@~ for @{ start } to 10 ~@>
  <span>@{ :i }</span>
<@~ end ~@>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (expression
        (variable
          (variable_open)
          (variable_name)
          (variable_close)))
      (keyword)
      (expression
        (number))
      (statement_close))
    (text)
    (variable
      (variable_open)
      (variable_name)
      (variable_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))

=============
Foreach Files
=============

<@ foreach in "*.jpg, *.png" { width: 400, height: 300, crop: true } @>
  <p>@{ :caption }</p>
<@ else @>
  <p>No images found!</p>
<@ end @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (keyword)
      (expression
        (string))
      (options
        (key)
        (number)
        (key)
        (number)
        (key)
        (boolean))
      (statement_close))
    (text)
    (variable
      (variable_open)
      (variable_name)
      (variable_close))
    (text)
    (tag_else
      (statement_open)
      (keyword_else)
      (statement_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))

================
Foreach Pagelist
================

<@ foreach in pagelist @>
  <li>@{ title }</li>
<@ else @>
  <li>No pages here!</li>
<@ end @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (keyword)
      (expression)
      (statement_close))
    (text)
    (variable
      (variable_open)
      (variable_name)
      (variable_close))
    (text)
    (tag_else
      (statement_open)
      (keyword_else)
      (statement_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))

==========
Coditional
==========

<@ if @{ variable | filter } != 'Hello' @>
  True
<@ else @>
  False
<@ end @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (expression
        (variable
          (variable_open)
          (variable_name)
          (pipe_separator)
          (pipe_function_name)
          (variable_close))
        (operator)
        (string))
      (statement_close))
    (text)
    (tag_else
      (statement_open)
      (keyword_else)
      (statement_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))

========
Negation
========

<@ if not @{ variable | filter } @>
  True
<@ end @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (expression
        (negation)
        (variable
          (variable_open)
          (variable_name)
          (pipe_separator)
          (pipe_function_name)
          (variable_close)))
      (statement_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))

=======
Snippet
=======

<@ snippet test @>
  <span>Content</span>
<@ end @>

<@ test @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (snippet)
      (statement_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (statement
    (statement_open)
    (function)
    (statement_close))
  (text))

======
Nested
======

<@ if @{ variable | filter } != 'Hello' @>
  <@ snippet test @>
    <span>Content</span>
  <@ end @>
<@ else @>
  False
<@ end @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (expression
        (variable
          (variable_open)
          (variable_name)
          (pipe_separator)
          (pipe_function_name)
          (variable_close))
        (operator)
        (string))
      (statement_close))
    (block
      (tag_start
        (statement_open)
        (keyword)
        (snippet)
        (statement_close))
      (text)
      (tag_end
        (statement_open)
        (keyword_end)
        (statement_close)))
    (tag_else
      (statement_open)
      (keyword_else)
      (statement_close))
    (text)
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))

=====
Empty
=====

<@ snippet test @>
<@ end @>

---

(automad
  (block
    (tag_start
      (statement_open)
      (keyword)
      (snippet)
      (statement_close))
    (tag_end
      (statement_open)
      (keyword_end)
      (statement_close)))
  (text))
